# project_RAG

./: .gitignore  PRD.md  README.md  eslint.config.js  ingest_docs.bat  ingest_docs.py  ingest_docs.sh  package-lock.json  package.json  run-backend.bat  run-backend.sh  run-frontend.bat  run-frontend.sh  需求.md
backend/: .env  .env.example  install-llm-windows-cpu.bat  install-llm-windows-cuda.bat  requirements-llm.txt  requirements.txt
backend/app/: config.py  main.py
backend/app/compression/: context_compression.py
backend/app/llm/: llama_engine.py
backend/app/rag/: chroma_store.py
docs/: README.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: AppBackground.tsx  ChatGPTAvatar.tsx  ChatToolbar.tsx  ChatTranscript.tsx  CopyIcon.tsx  EditIcon.tsx  HeaderBar.tsx  InputBar.tsx  RegenerateIcon.tsx
frontend/src/providers/: ThemeProvider.tsx
scripts/: wait-dev-and-start-electron.mjs
server/: config.mjs  createApp.mjs  index.mjs
server/lib/: upstreamHeaders.mjs
server/middleware/: asyncRoute.mjs
server/routes/: enterpriseChatCompletionsGateway.mjs
server/services/: documentExtract.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  config.rs  document.rs  error.rs  gateway.rs  lib.rs  main.rs  proxy.rs  upstream.rs
src/main/: index.cjs
src/preload/: index.cjs
src/renderer/: index.html  postcss.config.js  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts
(+13 files in other folders)
