[package]
name = "private-rag"
version = "1.0.0"
description = "RAG系统 — Tauri + React"
authors = ["RAG系统"]
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "private_rag_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["multipart"] }
tower-http = { version = "0.6", features = ["cors"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures = "0.3"
thiserror = "2"
zip = "2"
quick-xml = "0.37"
pdf-extract = "0.8"
utf8-chars = "3"
multer = "3"
bytes = "1"
